fix swagger and router
